--- a/css/grid.css
+++ b/css/grid.css
@@ -133,6 +133,32 @@
     visibility: visible;
     width: 100%;
   }
+
+  .unit-s-1-2,
+  .s-1-2 {
+    width: 50%;
+  }
+
+  .unit-s-1-3,
+  .s-1-3 {
+    width: 33.3333%;
+  }
+
+  .unit-s-2-3,
+  .s-2-3 {
+    width: 66.6667%;
+  }
+
+  .unit-s-1-4,
+  .s-1-4 {
+    width: 25%;
+  }
+
+  .unit-s-3-4,
+  .s-3-4 {
+    width: 75%;
+  }
+
   .unit-s-1-2,
   .s-1-2,
   .unit-s-1-3,
@@ -176,17 +202,63 @@
     left: 0;
   }
 
+  .unit-m-1-2,
+  .m-1-2 {
+    width: 50%;
+  }
+
+  .unit-offset-m-1-2 {
+    margin-left: 50%;
+  }
+
+  .unit-push-m-1-2 {
+    left: 50%;
+  }
+
+  .unit-pull-m-1-2 {
+    left: -50%;
+  }
+
+  .unit-m-1-3,
+  .m-1-3 {
+    width: 33.3333%;
+  }
+
+  .unit-offset-m-1-3 {
+    margin-left: 33.3333%;
+  }
+
+  .unit-push-m-1-3 {
+    left: 33.3333%;
+  }
+
+  .unit-pull-m-1-3 {
+    left: -33.3333%;
+  }
+
+  .unit-m-2-3,
+  .m-2-3 {
+    width: 66.6667%;
+  }
+
+  .unit-offset-m-2-3 {
+    margin-left: 66.6667%;
+  }
+
+  .unit-push-m-2-3 {
+    left: 66.6667%;
+  }
+
+  .unit-pull-m-2-3 {
+    left: -66.6667%;
+  }
 
   .unit-m-1-2,
   .m-1-2,
   .unit-m-1-3,
   .m-1-3,
   .unit-m-2-3,
-  .m-2-3,
-  .unit-m-1-4,
-  .m-1-4,
-  .unit-m-3-4,
-  .m-3-4 {
+  .m-2-3 {
     display: inline-block;
     visibility: visible;
   }
